<resources>
    <string name="app_name">Weather Cast</string>
    <string name="weather_location">Alexandria/Egypt</string>
    <string name="weather_condition">Mostly Cloudy</string>
    <string name="degreeo">o</string>
    <string name="today">Today</string>
    <string name="next_five_days">Daily</string>
    <string name="home">Home</string>
    <string name="favorits">Favorits</string>
    <string name="alarm_and_notification"><![CDATA[Alerts & Notifications]]></string>
    <string name="settings">Settings</string>
    <string name="deg">\t°</string>
    <string name="splash_text">Please enable location permission to get weather status </string>
    <string name="splash_fromhere"><u>Enable</u></string>
    <string name="select">Choose this location</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="save">Save</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="language">Language</string>
    <string name="location">Location</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="gps">GPS</string>
    <string name="map">MAP</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fehrinhiet">Fehrenheit</string>
    <string name="meter">Meter / Sec</string>
    <string name="mile">Mile / Hour</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="cloud">Clouds</string>
</resources>