<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="HFVModel"
            type="com.example.weathercast.data.pojo.CurrentWeatherData" />
        <variable
            name="metter"
            type="String" />
        <variable
            name="currentdate"
            type="String" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_background_linear_gradiant_color"
            tools:context=".homeweather.view.HomeFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="23dp"
                    android:layout_height="31dp"
                    android:layout_marginStart="97dp"
                    android:layout_marginTop="4dp"
                    android:padding="2dp"
                    android:src="@drawable/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/weather_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="7dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cityName="@{HFVModel.name}"
                    app:countryCode="@{HFVModel.sys.country}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@{HFVModel.weather.get(0).description}"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weather_location" />

                <ImageView
                    android:id="@+id/weather_state"
                    android:layout_width="129dp"
                    android:layout_height="103dp"
                    android:layout_marginTop="12dp"
                    android:scaleType="center"
                    app:error="@{@android:drawable/ic_dialog_alert}"
                    app:imageIcon="@{HFVModel.weather.get(0).icon}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/weather_degree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{String.valueOf(Math.round(HFVModel.main.temp))}"
                    android:textColor="@color/white"
                    android:textSize="70sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.451"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weather_state" />

                <TextView
                    android:id="@+id/odegree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/degreeo"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/weather_degree"
                    app:layout_constraintTop_toTopOf="@+id/weather_degree" />

                <TextView
                    android:id="@+id/degree_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:text="@{metter}"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    app:layout_constraintStart_toEndOf="@+id/odegree"
                    app:layout_constraintTop_toTopOf="@+id/odegree" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@{currentdate}"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weather_degree" />

                <TextView
                    android:id="@+id/todayTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/today"
                    android:textColor="@color/fragment_home_yello"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/date" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="16dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/today_weather_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/recycleview_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/todayTextView" />

                <TextView
                    android:id="@+id/nextFiveDaysTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/next_five_days"
                    android:textColor="@color/fragment_home_yello"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/today_weather_recyclerView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/next_days_weather_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@color/recycleview_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nextFiveDaysTextView" />

                <LinearLayout
                    android:id="@+id/windL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline5"
                    app:layout_constraintHorizontal_bias="0.44"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/next_days_weather_recycler_view">

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:text="@string/wind"/>

                    <ImageView
                        android:id="@+id/imageViewwind"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="5dp"
                        android:layout_marginBottom="3dp"
                        android:src="@drawable/wind"/>

                        <TextView
                            android:id="@+id/weather_wind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@{HFVModel.wind.speed.toString()}"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline5"
                    app:layout_constraintHorizontal_bias="0.44"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/windL">

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:text="@string/pressure"/>

                    <ImageView
                        android:id="@+id/imageViewpressure"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="5dp"
                        android:layout_marginBottom="3dp"
                        android:src="@drawable/pressure"/>

                    <TextView
                        android:id="@+id/weather_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@{HFVModel.main.pressure.toString()}"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hummidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toBottomOf="@+id/next_days_weather_recycler_view">

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:text="@string/humidity"/>

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="5dp"
                        android:src="@drawable/humidity"/>


                        <TextView
                            android:id="@+id/weather_condition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@{HFVModel.main.humidity.toString()}"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toBottomOf="@+id/hummidity">

                    <TextView
                        android:id="@+id/cloud"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:text="@string/cloud"/>

                    <ImageView
                        android:id="@+id/imageView3cloud"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="5dp"
                        android:src="@drawable/cloud"/>


                    <TextView
                        android:id="@+id/weather_conditioncloud"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@{HFVModel.clouds.all.toString()}"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="196dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
        <FrameLayout
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_background_linear_gradiant_color">
            <ProgressBar
                style="@style/WhiteProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>
    </FrameLayout>
</layout>